syntax = "proto3";

package greeting;

message Greeting {
    string message = 1;
}

message Person {
    string name = 1;
}

service GreetingService {
    rpc hello (Person) returns (Greeting) {};
    rpc helloClientSide (stream Person) returns (Greeting) {};
    rpc helloServerSide (Person) returns (stream Greeting) {};
    rpc helloBidirectional (stream Person) returns (Greeting) {};
}

